@@ -1,3 +1,7 @@
+RM-2007-02-06-0: Enhancem:  New test for issue 1914
+                            Test also checks issue 2174.
+                 Review:    JG
+
 JG-2007-02-06-0: Enhancem:  New check for IZ 2183.
                  Review:    RD
 
